# trumpet-tyckiter

./: .gitignore  CMakeLists.txt  README.md
resources/: trumpet.xcf  trumpet_key.xcf
resources/sound/: notes.txt
src/: main.c
